# ncpoleon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: buffer_to_main.yml  checks.yml  codspeed.yml  distribute.yml  main_to_buffer.yml  tests-mosek-and-coverage.yml  tests-mosek.yml  tests.yml
python/ncpoleon/: __init__.py  __init__.pyi  utils.py
python/ncpoleon/export/: __init__.py  to_mosek.py  to_picos.py
python/ncpoleon/logging/: __init__.py
python/ncpoleon/polynomials/: __init__.py  __init__.pyi
python/ncpoleon/polynomials/commutative_polynomials/: __init__.py  __init__.pyi
python/ncpoleon/polynomials/noncommutative_polynomials/: __init__.py  __init__.pyi
python/ncpoleon/relaxations/: __init__.py  __init__.pyi
python/ncpoleon/solve/: mosek_solution.py  picos_solution.py  solution.py  solution.pyi  solve.py  sos_decomposition.py  utils.py
python/tests/: test_benchmark_max_cut.py  test_benchmark_polynomial_manipulation.py  test_chsh_uniform.py  test_guessing_probability_chsh.py  test_i3322.py  test_multiple_moment_matrices.py  test_simple_commutative_problem.py  test_simple_noncommutative_problem.py  utils.py
src/: lib.rs  logger.rs  logging.rs  progress.rs
src/polynomials/: mod.rs  monomial.rs  operator.rs  polynomial.rs
src/polynomials/commutative_polynomials/: mod.rs
src/polynomials/commutative_polynomials/monomials/: commutative_monomial.rs  mod.rs
src/polynomials/commutative_polynomials/operators/: commutative_operator.rs  mod.rs  utils.rs
src/polynomials/commutative_polynomials/polynomials/: commutative_polynomial.rs  mod.rs
src/polynomials/noncommutative_polynomials/: mod.rs
src/polynomials/noncommutative_polynomials/monomials/: mod.rs  noncommutative_monomial.rs
src/polynomials/noncommutative_polynomials/operators/: mod.rs  noncommutative_operator.rs  utils.rs
src/polynomials/noncommutative_polynomials/polynomials/: mod.rs  noncommutative_polynomial.rs
src/polynomials/utils/: add.rs  merge_btreemaps.rs  mod.rs  mul.rs  pow.rs
src/relaxations/: constraint.rs  mod.rs  moment_matrix.rs  sdp_relaxation.rs
stubs/picos/: __init__.pyi
stubs/picos/modeling/: __init__.pyi
