[package]
name = "ncpoleon"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ncpoleon"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["num-complex"] }
num-complex = "0.4.6"
num-traits = "0.2.19"
itertools = "0.14.0"
rustc-hash = "2.1.1"
pyo3-log = "0.13.3"
log = "0.4.29"
kdam = "0.6.4"

[dev-dependencies]
rstest = "0.26.1"
