[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ncpoleon"
description = "An efficient Python library for (non)commutative polynomial optimization via semidefinite programming relaxations."
license = "GPL-3.0"
license-files = ["LICENSE"]
authors = [
    { name = "Peter Brown", email = "peter.brown@telecom-paris.fr" },
    { name = "Tristan Nemoz", email = "tristan.nemoz@gmail.com" },
]
keywords = [
    "polynomial optimization",
    "commutative polynomial optimization",
    "non-commutative polynomial optimization",
    "sdp",
    "semidefinite programming",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = []
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-codspeed",
    "numpy",
    "scipy",
    "scipy-stubs",
    "picos",
    "mypy",
    "mosek",
    "mkdocs-material",
    "mkdocstrings[python]",
]
picos = ["picos", "scipy", "numpy"]
mosek = ["mosek"]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "ncpoleon._accelerate"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "FA100",
    "NPY",
    "UP006",
    "UP007",
    "UP010",
    "UP035",
    "UP036",
    "UP037",
    "UP045",
    "W",
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = "python/"
exclude = "python/tests"
mypy_path = "stubs"

[tool.pytest]
console_output_style = "progress"
strict_config = true
strict_markers = true
strict_parametrization_ids = true
testpaths = ["python/tests"]
